--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Tech Returner News</h1>
+      <nav>
+        <ul>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Opinion</a></li>
+          <li><a href="#">Tech</a></li>
+          <li><a href="#">Sport</a></li>
+          <li><a href="#">Culture</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Lifestyle</a></li>
+          <li><a href="#">Jobs</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
