--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
         </ul>
       </nav>
     </header>
+
+    <form>
+      <p>
+        Preferences <br /><br />
+        We aim to make this site accessible to a wide audience and to ensure a
+        great experience for all users by conforming to World Wide Web
+        Consortium accessibility guidelines (W3C's WCAG)<br />
+        However, if you are having trouble reading this website you can change
+        the way it looks or disable some of its functionalities.<br />
+      </p>
+      <input type="checkbox" id="flashing-elements" />
+      <label for="flashing-elements"
+        >Allow flashing elements. Untick this to disable flashing and moving
+        elements.</label
+      >
+    </form>
+    <article>
+      <h2>Accessibility Features: Easy Wins</h2>
+      <p></p>
+    </article>
   </body>
 </html>
